# Project-Mastermind

./: .env.example  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  LICENSE  README.md  SECURITY.md  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  server.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python-package.yml
doc/architecture/v_1.1.2/: architecture-flow-classes.mermaid  architecture-flow.mermaid
doc/testing/: claude3api_mocking.md
examples/: basic_usage.py
gui/: .env.example  README.md  index.html  package.json  tailwind.config.js  vite.config.ts
gui/src/: App.jsx  index.css  main.tsx  store.ts
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/icons/: site.webmanifest
gui/src-tauri/src/: main.rs
gui/src/components/: ChatArea.tsx  ChatMessage.tsx  Layout.tsx  MemoryPanel.tsx  MessageInput.tsx  Sidebar.tsx
gui/src/services/: apiService.ts
gui/src/styles/: globals.css
mastermind/: __init__.py  core.py  database.py  database_protocol.py  knowledge_cluster.py  mcp.py  server.py  vectordb.py
tests/: Debug Flow Analysis.mermaid  conftest.py  detailed_context_memory_graph.gexf  test_core.py
