[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "project-mastermind"
version = "0.1.0"
description = "An advanced multi-agent system leveraging different LLM models for enhanced cognitive capabilities"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["ai", "llm", "multi-agent", "claude"]
authors = [
  { name = "t4ai-workshops", email = "your-email@t4ai.be" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "anthropic>=0.8.0",
    "asyncio>=3.4.3",
    "typing-extensions>=4.7.1",
    "chromadb>=0.4.14",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
    "mypy",
    "flake8",
]

[tool.hatch.build.targets.wheel]
packages = ["mastermind"]

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = [
    "tests",
]
pythonpath = [
    "."
]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["anthropic.*", "chromadb.*"]
ignore_missing_imports = true