[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "project-mastermind"
version = "0.2.0"
description = "An advanced multi-agent system leveraging different LLM models for enhanced cognitive capabilities"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["ai", "llm", "multi-agent", "claude"]
authors = [
  { name = "t4ai-workshops", email = "webdesign@t4ai.be" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "anthropic>=0.30.0",
    "SQLAlchemy>=2.0.36",
    "asyncio>=3.4.3",
    "typing-extensions>=4.7.1",
    "numpy>=1.24.0",
    "aiosqlite>=0.20.0",
    "greenlet>=3.1.1",
    "aiofiles>=23.2.1",
    "types_aiofiles",
    "tokenizers==0.21.0",
    "transformers==4.47.0",
    "sentence-transformers>=2.2.2",
    "pydantic",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
    "mypy",
    "flake8",
]

[tool.hatch.build.targets.wheel]
packages = ["mastermind"]

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = [
    "tests",
]
pythonpath = [
    "."
]
asyncio_mode = "auto"

[tool.mypy]
plugins = ["sqlalchemy.ext.mypy.plugin"]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["sqlalchemy.*"]
ignore_missing_imports = true