[package]
name = "mastermind-app"
version = "0.1.0"
description = "MasterMind AI Assistant"
authors = ["t4ai"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.0", features = [ "window-minimize", "path-all", "window-unminimize", "window-unmaximize", "window-maximize", "window-start-dragging", "window-show", "window-hide", "window-close", "fs-all"] }
reqwest = { version = "0.11", features = ["json"] }
window-vibrancy = "0.4.3"
cocoa = "0.25.0"
dotenv = "0.15.0"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25.0"
objc = "0.2.7"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
